[tool.poetry]
name = "bingpoints"
version = "0.1.0"
description = ""
authors = ["jaimeshafer <jaimeshafer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyautogui = "^0.9.54"
keyboard = "^0.13.5"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.31.0"
wonderwords = "^2.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
